--- a/03-choreography/index.html
+++ b/03-choreography/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <form class="ui-form">
-      <input class="ui-input" type="email" placeholder="your@email.com" />
-      <button class="ui-button" type="button" onclick="setState('subscribing')">
+      <input style="--i: 1" class="ui-input" type="email" placeholder="your@email.com" />
+      <button style="--i: 2" class="ui-button" type="button" onclick="setState('subscribing')">
         <span>Subscribe</span>
       </button>
     </form>
