--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <li><a href="/06-reactive/">Reactive Animations</a></li>
         <li><a href="/examples/inflight/">Inflight Example</a></li>
       </ul>
-      <div class="ball"></div>
+      <div class="container">
+        <div class="ball" style="--i: 1"></div>
+        <div class="ball" style="--i: 2"></div>
+        <div class="ball" style="--i: 3"></div>
+      </div>
     </div>
   </body>
 </html>
